[DMAAP-BC] Consolidate bus controller repos
	Migrate BC CSITs to the repo
	Fix documentation

Signed-off-by: efiacor <fiachra.corcoran@est.tech>
Change-Id: I874ed61be1b61187e233e9fd0937f6658f0ec0f0
Issue-ID: DMAAP-1544